@@ -40,26 +40,31 @@ top_builddir_full=`cd \$(top_builddir); pwd`
 
 lib_LTLIBRARIES = libgmodule-2.0.la
 
+if OS_WIN32_AND_DLL_COMPILATION
 if MS_LIB_AVAILABLE
 noinst_DATA = gmodule-2.0.lib
 
+install_ms_lib_cmd = $(INSTALL) gmodule-2.0.lib $(DESTDIR)$(libdir)
+uninstall_ms_lib_cmd = -rm $(DESTDIR)$(libdir)/gmodule-2.0.lib
+endif
+endif
+
 install-ms-lib:
-	$(INSTALL) gmodule-2.0.lib $(DESTDIR)$(libdir)
+	$(install_ms_lib_cmd)
 
 uninstall-ms-lib:
-	-rm $(DESTDIR)$(libdir)/gmodule-2.0.lib
-else
-install-ms-lib:
-uninstall-ms-lib:
-endif
+	$(uninstall_ms_lib_cmd)
 
 if PLATFORM_WIN32
 no_undefined = -no-undefined
 endif
 
-if OS_WIN32
+if OS_WIN32_AND_DLL_COMPILATION
 export_symbols = -export-symbols $(srcdir)/gmodule.def
 gmodule_def = gmodule.def
+
+gmodule_win32_res = gmodule-win32-res.o
+gmodule_win32_res_ldflag = -Wl,$(gmodule_win32_res)
 
 install-def-file:
 	$(INSTALL) $(srcdir)/gmodule.def $(DESTDIR)$(libdir)/gmodule-2.0.def
@@ -69,11 +74,6 @@ uninstall-def-file:
 else
 install-def-file:
 uninstall-def-file:
-endif
-
-if OS_WIN32
-gmodule_win32_res = gmodule-win32-res.o
-gmodule_win32_res_ldflag = -Wl,$(gmodule_win32_res)
 endif
 
 libgmodule_2_0_la_SOURCES = gmodule.c
@@ -87,10 +87,8 @@ libgmodule_2_0_la_LIBADD = $(G_MODULE_LIBS_EXTRA) $(G_MODULE_LIBS) $(libglib)
 
 libgmodule_2_0_la_DEPENDENCIES = $(gmodule_win32_res) $(gmodule_def)
 
-if OS_WIN32
 gmodule-win32-res.o: gmodule.rc
 	$(WINDRES) gmodule.rc $@
-endif
 
 gmodule-2.0.lib: libgmodule-2.0.la gmodule.def
 	lib -name:libgmodule-2.0-$(LT_CURRENT_MINUS_AGE).dll -def:$(srcdir)/gmodule.def -out:$@
